[LP-338] Fixes products grid teaser visibility on tablets

--- a/src/components/grid-layout/grid-layout.scss
+++ b/src/components/grid-layout/grid-layout.scss
@@ -446,19 +446,25 @@ $grid-layout_bricks-per-row--with-sidebar: deep-get(
                             grid-row-end: span 2;
                         }
                     }
+                }
+            }
 
-                    &:not(#{$root}__brick--x2) {
-                        @if $itemsPerRow >= 2 {
-                            .cs-image-teaser__aspect-ratio {
-                                padding-top: unset !important;
+            #{$root}:not(#{$root}--with-sidebar) & {
+                @each $breakpoint, $itemsPerRow in $grid-layout_bricks-per-row {
+                    @include media('>=#{$breakpoint}') {
+                        &:not(#{$root}__brick--x2) {
+                            @if $itemsPerRow >= 2 {
+                                .cs-image-teaser__aspect-ratio {
+                                    padding-top: unset !important;
+                                }
                             }
                         }
-                    }
 
-                    &--x2 {
-                        @if $itemsPerRow >= 3 {
-                            .cs-image-teaser__aspect-ratio {
-                                padding-top: unset !important;
+                        &--x2 {
+                            @if $itemsPerRow >= 3 {
+                                .cs-image-teaser__aspect-ratio {
+                                    padding-top: unset !important;
+                                }
                             }
                         }
                     }
@@ -505,6 +511,22 @@ $grid-layout_bricks-per-row--with-sidebar: deep-get(
 
                             &--y2 {
                                 grid-row-end: span 2;
+                            }
+                        }
+
+                        &:not(#{$root}__brick--x2) {
+                            @if $itemsPerRow >= 2 {
+                                .cs-image-teaser__aspect-ratio {
+                                    padding-top: unset !important;
+                                }
+                            }
+                        }
+
+                        &--x2 {
+                            @if $itemsPerRow >= 3 {
+                                .cs-image-teaser__aspect-ratio {
+                                    padding-top: unset !important;
+                                }
                             }
                         }
                     }
